base/keycloak/base/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: ghcr.io/safy-io/keycloak:master
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        args: 
        - start
        - "--optimized"
        - "--spi-theme-static-max-age=3600"
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          failureThreshold: 8
          initialDelaySeconds: 30
          httpGet:
            path: /realms/master
            port: http
        readinessProbe:
          failureThreshold: 8
          initialDelaySeconds: 30
          httpGet:
            path: /realms/master
            port: http
